--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <% end %>
 
   <% if current_user %>
+  <%= current_user.username %>
     <%= button_to "Sign Out", session_url, method: :delete %>
   <% else %>
     <%= link_to "Sign Up", new_user_url %>
